# pyprint-img

./: .pre-commit-config.yaml  justfile  mem.py  p.py  pyproject.toml  readme.md  requirements-dev.txt  tests.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: test.yml
bryle/: __init__.py  args.py  chars.py  img.py  p.py  pxp.py  stat.py  util.py
tests/: conftest.py  test_cli.py  test_pxp.py  test_stat.py
util/: doc_examples.py
