[build-system]
requires = ['setuptools>=74.1', 'cython>=3']

[project]
name = 'brylify'
version = "0.0.0"
dependencies = [
  'cython>=3',
  'pillow>=12.1.0',
]

[project.optional-dependencies]
dev = [
  'flake8-pyproject==1.2.*',
  'flake8-simplify==0.30.*',
  'mypy==1.19.*',
  'pytest-cov==7.0.*',
]

[tool.setuptools]
packages = ["bryle"]

[[tool.setuptools.ext-modules]]
name = "bryle.pxp"
sources = ["bryle/pxp.py"]

[tool.setuptools.package-data]
bryle = ["*.pyx"]

[project.scripts]
p = "bryle:main"
bra = "bryle:main"


[tool.coverage.report]
fail_under = 90
precision = 2

[tool.flake8]
max_complexity = 8
doctests = 1
