[project]
name = 'brylify'
version = "0.0.0"
dependencies = [
  'pillow>=12.1.0',
]

[project.optional-dependencies]
dev = [
  'flake8-pyproject==1.2.*',
  'flake8-simplify==0.30.*',
  'isort==7.0.*',
  'mypy==1.19.*',
  'pytest-cov==7.0.*',
]

[tool.setuptools]
packages = ["bryle"]

[project.scripts]
p = "bryle:main"
bra = "bryle:main"


[tool.coverage.report]
fail_under = 90
precision = 2

[tool.flake8]
max_complexity = 8
doctests = 1

[tool.isort]
profile = 'black'
