[project]
name = 'brylify'
version = "0.0.0"
dependencies = [
  'pillow>=12.1.0',
]

[project.optional-dependencies]
dev = [
  'flake8-bugbear==25.11.*',
  'flake8-pyproject==1.2.*',
  'flake8-simplify==0.30.*',
  'isort==8.0.*',
  'mypy==1.19.*',
  'pre-commit==4.5.*',
  'pytest-cov==7.0.*',
]

[tool.setuptools]
packages = ["bryle"]

[project.scripts]
p = "bryle:main"
bra = "bryle:main"


[tool.coverage.report]
fail_under = 90
precision = 2

[tool.flake8]
max-complexity = 9
doctests = 1
extend-ignore = ['E501']
extend-select = ['B9']

[tool.isort]
profile = 'black'
